--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     background-color: rgb(250, 250, 250);
-    text-align: center;
+    height: 100%;
 }
 
 .meet-logo{
@@ -9,7 +9,7 @@ body{
     padding: 50px;
 }
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 768px){
     .first-container{
         flex-wrap: wrap;
         text-align: center;
@@ -51,12 +51,14 @@ body{
 
     p.last-text{
         padding: 20px;
+        width: 100%;
         text-align: center;
     }
 
     h1#heading-two{
         width: 100%;
         padding: 20px;
+        text-align: center;
     }
 
     img.img{
@@ -72,7 +74,11 @@ body{
     }
 
     button#button-three{
-        margin-bottom: 100px;
+        margin: 10px 20px 10px 130px;
+    }
+
+    #buttonv{
+        padding-top: 50px;
     }
 }
 
@@ -86,9 +92,16 @@ body{
 .third-container{
     display: flex;
     background-image: url(image-footer.jpg);
+    background-color: rgba(77, 150, 168, 0.3);
+    width: 100%;
     color: white;
     height: 300px;
     margin-top: 100px; 
+}
+
+.buttonv{
+    width: 500px;
+    background-color: rgba(77, 150, 168, 0.7);
 }
 
 .first-text{
@@ -134,6 +147,8 @@ p{
 #heading-two{
     padding: 100px;
     margin: 0;
+    width: 100%;
+    background-color: rgba(77, 150, 168, 0.7);
 }
 
 button{
@@ -169,7 +184,9 @@ button{
 #button-three{
     width: 150px;
     height: 50px;
-    margin: auto;
+    margin: 130px 80px 50px 200px;
+    padding: auto;
+    
 }
 
 #button-three:hover{
@@ -210,7 +227,9 @@ button{
 
 .last-text{
     margin: 0;
-    padding: 120px 100px 50px 100px;
+    width: 100%;
+    padding-top: 120px;
+    background-color: rgba(77, 150, 168, 0.7);
 }
 
 #describe{
