--- a/index.css
+++ b/index.css
@@ -211,6 +211,12 @@ button{
     border-radius: 5px;
     margin: 15px;
     width: 200px;
+    transition: 2s;
+}
+
+.img:hover{
+    transform: scale(1.5);
+    transition-delay: 0.5s;
 }
 
 .first{
